
22. Fix FreeBSD gb2312 encoding name from euc to euccn.
    Thanks to statue <statue.bbs@bbs.sayya.org>.

23. Add UTF-8, OnTheSpot, and cj5 patches.
    Thanks to <firefly@firefly.idv.tw>

24. configure: 
    a. Now we chould build xcin without libtabe/libbims.
      (when libtabe/libbims/BerkeleyDB not available)
    b. Add Berkeley DB4 auto-detecting.


xcin-2.5.3-pre2:  2001/12/02
------------------------------
1. Fix memory leakage problem in IMdkit: i18nIc.c.
   Thanks to <cwhuang@linux.org.tw>.

2. Add $(intl_inc) variables in several Makefiles.
   Change src/lib/IMdkit/IMConn.c: #include <malloc.h> to <stdlib.h>.
   Bug fix for TSI_HINT in gen_inp.
   Thanks to Kuang-che Wu <kcwu@ck.tp.edu.tw>.

3. Fix bug of ic_set_values() of initailly setting ic values for new ICs.

4. Change xim.c: xim_commit(), commit_string(): to collect strings and commit
   at once.

5. Change DebugLog() calling interface.

6. xim_IC.c: ic_set_values: case XNPreeditState handling, for mozilla.
   Thanks to <ada2@netscape.net>, Kuang-che Wu <kcwu@ck.tp.edu.tw>.

7. Change IM modules .so to be without version numbers.
   Thanks to Rui-Xiang Guo <rxg@ms25.url.com.tw>.

8. Add the first xcin man page: xcin.1.
   Thanks to <cyril_huang@yahoo.com>.

9. Fix gui_overspot.c: window position not exceed the boundary of the desktop.
   Thanks to Chung-Hung Chen <alone@mis.mgt.ncu.edu.tw>.

10. Fix xim_IC.c: ic_get_values: bug for XNPreeditState.
    Thanks to <katakai@japan.sun.com>. 

11. Redesign gui_overspot:
    a. Use the single gui_overspot window for all the clients.
    b. Monitor the XConfigureEvent & XDestroyNotifyEvent for all the clients.
    c. Get client window position only when XConfigureEvent comes.
    d. Delete the check_ic_exist().

12. Bug fix for gen_inp.c: HINTTSI: absorb ESC, BackSpace, Delete, and modifier
    keys, such that the HINTTSI window will close when these keys pressed.

13. Change the .db dir from $(prefix)/share/tabe/tsiyin to $(prefix)/lib/tabe/.
