@@ -1,0 +1,248 @@
+;
+;  Xcin resource file for OS X.
+;
+;  By T.H.Hsieh.
+;
+
+;
+;  Directories.
+;
+(define XCIN_DEFAULT_DIR      "%xcin_dir%")
+(define XCIN_USER_DIR         ".xcin")
+
+;
+;  This defines GUI attribute.
+;
+(define INDEX_FONT  		"-sony-*-16-*-iso8859-1")
+(define FG_COLOR    		"white")
+(define BG_COLOR    		"blue")
+(define M_FG_COLOR  		"yellow")
+(define M_BG_COLOR  		"darkred")
+(define ULINE_COLOR		"cyan")
+(define GRID_COLOR		"white")
+(define X_GEOMETRY  		"45x2+200-1")
+(define START_MAINWIN2		"NO")
+(define MAINWIN2_GEOMETRY	"27x1+200-1")
+(define XCIN_HIDE   		"NO")
+(define XKILL_DISABLE		"NO")
+(define ICCHECK_DISABLE		"NO")
+(define SINGLE_IM_CONTEXT	"NO")
+(define IM_FOCUS_ON		"NO")
+(define KEEP_POSITION_ON	"NO")
+(define DISABLE_WM_CTRL		"NO")
+(define DIFF_BEEP		"YES")
+(define KEYBOARD_TRANSLATE	"NO")
+
+(define LOCALE	'(zh_TW.Big5 zh_CN.EUC zh_TW.UTF-8))
+
+;
+;  XIM Input Style Adjustments.
+;
+(define INPUT_STYLE		'(Root OverTheSpot OnTheSpot))
+(define OVERSPOT_USE_USRCOLOR	"YES")
+(define OVERSPOT_USE_USRFONTSET "YES")
+(define OVERSPOT_WINDOW_ONLY	"NO")
+(define ONSPOT_PREEDIT_MODE     "REVERSE")
+
+;
+;  Special Trigger Keys.
+;
+;(define FKEY_ZHEN		"ctrl space")
+;(define FKEY_2BSB		"shift space")
+;(define FKEY_CIRIM		"ctrl shift")
+;(define FKEY_CIRRIM		"shift ctrl")
+;(define FKEY_CHREP		"ctrl alt r")
+;(define FKEY_SIMD		"ctrl alt i")
+;(define FKEY_IMFOCUS		"ctrl alt f")
+;(define FKEY_IMN		"ctrl alt")
+;(define FKEY_QPHRASE		"shift alt")
+
+;
+;  IM module default resources.
+;
+(define gen_inp_default
+        '((AUTO_COMPOSE         YES)
+          (AUTO_UPCHAR          YES)
+          (AUTO_FULLUP          NO)
+          (SPACE_AUTOUP         NO)
+          (SELKEY_SHIFT         NO)
+          (SPACE_IGNORE         NO)
+          (SPACE_RESET          YES)
+          (AUTO_RESET           NO)
+          (WILD_ENABLE          YES)
+          (SINMD_IN_LINE1       NO)
+          (END_KEY              NO)
+          (QPHRASE_MODE         0)      ; 1:shift, 2:ctrl, 4:alt, 8:fallback
+          (DISABLE_SEL_LIST     "NONE")
+	  (KEYSTROKE_REMAP	"NONE")
+          (BEEP_WRONG           YES)
+          (BEEP_DUPCHAR         NO)
+          (TSI_FNAME            "%tabe_data%tsi.db")
+	  (HINT_SELECT		NO)
+	  (HINT_TSI		NO)))
+
+(define bimsphone_default
+        '((N_SELECTION_KEY      9)
+          (SELECTION_KEYS       0)      ; 0: "1234567890", 1: "asdfgjkl;"
+          (PAGE_KEYS            5)      ; 1:<> 2:,. 4:(Rt)(Lt)
+          (QPHRASE_MODE         1)      ; 1:shift, 2:ctrl, 4:alt, 8:fallback
+        ;
+        ; This is only valid for "bimsphone*" IM name.
+          (AUTO_SELECTION       YES)
+          (KEYMAP               0)      ; 0:zozy, 1:et, 2:et26, 3:hsu
+        ;
+        ; This is only valid for "bimspinyin*" IM name.
+          (PINPHO_MAP           "bims_pinyin")
+        ;
+        ; The following has effect only when AUTO_SELECTION is YES
+          (TSI_FNAME            "%tabe_data%tsi.db")
+          (YIN_FNAME            "%tabe_data%yin.db")
+	  (TSI_USERDEF_FNAME	"utsi.db")
+	  (YIN_USERDEF_FNAME	"uyin.db")
+          (SPACE_SELECTION      NO)
+          (PHRASE_SELECTION     YES)
+          (N_SELECTION_PHR      4)
+        ;
+        ; The following has effect only when AUTO_SELECTION is NO
+          (AUTO_UPCHAR          YES)))
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;
+;  This is the global configuration of the zh_TW.UTF-8 locale
+;
+(define zh_TW.UTF-8
+  '((DEFAULT_IM         "cj5")
+    (DEFAULT_IM_MODULE  "gen_inp")
+    (DEFAULT_IM_SINMD   "DEFAULT")
+    (PHRASE             "default.phr")
+    (CINPUT             (cj5 simplex5 phone jyutping bimspinyin bimsphone
+                         array30 jyutping0 zh_hex))
+    (FONTSET            "-arphic-medium-*-24-*-iso10646-1,-*-medium-*-24-*")
+    (OVERSPOT_FONTSET   "-arphic-medium-*-16-*-iso10646-1,-*-medium-*-16-*")))
+
+(define cj5@utf-8
+        '((SETKEY               1)))
+
+(define simplex5@utf-8
+        '((SETKEY               2)))
+
+(define phone@utf-8
+        '((SETKEY               3)
+          (END_KEY              YES)
+          (BEEP_DUPCHAR         YES)))
+
+(define jyutping@utf-8
+        '((SETKEY               4)
+          (END_KEY              YES)
+          (BEEP_DUPCHAR         YES)))
+
+(define bimsphone@utf-8
+        '((SETKEY               6)
+          (MODULE               "bimsphone")))
+
+(define bimspinyin@utf-8
+        '((SETKEY               7)
+          (MODULE               "bimsphone")))
+
+(define array30@utf-8
+        '((SETKEY               8)
+          (BEEP_DUPCHAR         YES)
+          (DISABLE_SEL_LIST     "w")
+          (KEYSTROKE_REMAP      "t:0xaaba;T:0xaaba;")))
+
+(define jyutping0@utf-8
+        '((SETKEY               9)
+          (BEEP_DUPCHAR         YES)))
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;
+;  This is the global configuration of the zh_TW.Big5 locale 
+;
+(define zh_TW.Big5 
+  '((DEFAULT_IM		"cj")
+    (DEFAULT_IM_MODULE	"gen_inp")
+    (DEFAULT_IM_SINMD	"DEFAULT")
+    (PHRASE		"default.phr")
+    (CINPUT		(cj simplex phone bimspinyin bimsphone jyutping
+			 array30 jyutping0 zh_hex))
+    (FONTSET		"-sony-*-24-*-iso8859-1,-*-medium-r-*-24-*-big5-0")
+    (OVERSPOT_FONTSET	"-sony-*-16-*-iso8859-1,-*-medium-r-*-16-*-big5-0")))
+;
+;  Here are detailed configuration of each IM (for zh_TW.Big5 locale).
+;
+(define cj@big5
+	'((SETKEY		1)))
+
+(define simplex@big5
+	'((SETKEY		2)))
+
+(define phone@big5
+	'((SETKEY		3)
+	  (END_KEY		YES)))
+
+(define jyutping@big5
+	'((SETKEY		4)
+	  (END_KEY		YES)))
+
+(define bimsphone@big5
+	'((SETKEY		6)
+	  (MODULE		"bimsphone")))
+
+(define bimspinyin@big5
+	'((SETKEY		7)
+	  (MODULE		"bimsphone")))
+
+(define array30@big5
+	'((SETKEY		8)
+	  (DISABLE_SEL_LIST	"w")
+	  (KEYSTROKE_REMAP	"t:0xaaba;T:0xaaba;")))
+
+(define jyutping0@big5
+	'((SETKEY		9)))
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;
+;  This is the global configuration of the zh_CN.EUC locale 
+;
+(define zh_CN.EUC
+  '((DEFAULT_IM		"pinyin")
+    (DEFAULT_IM_MODULE	"gen_inp")
+    (DEFAULT_IM_SINMD	"DEFAULT")
+    (PHRASE		"default.phr")
+    (CINPUT		(pinyin shuangpin jtcj_gb wubizixing phonegb2
+			 zh_hex))
+    (FONTSET		"-sony-*-24-*-iso8859-1,-*-medium-r-*-24-*-gb2312.1980-0")
+    (OVERSPOT_FONTSET	"-sony-*-16-*-iso8859-1,-*-medium-r-*-16-*-gb2312.1980-0")))
+;
+;  Here are detailed configuration of each IM (for zh_CN.EUC locale).
+;
+(define pinyin@euccn
+	'((SETKEY		1)))
+
+(define shuangpin@euccn
+	'((SETKEY		2)))
+
+(define jtcj_gb@euccn
+	'((SETKEY		3)))
+
+(define phonegb2@euccn
+	'((SETKEY		4)
+	  (END_KEY		YES)))
+
+(define wubizixing@euccn
+	'((SETKEY		5)))
+
+;
+;  The zh_hex module (zh_hex input method) is a special IM, which can be
+;  used in many different encodings.
+;
+(define zh_hex 
+	'((SETKEY		0)
+	  (MODULE		zh_hex)
+	  (INP_CNAME_big5	"0xa4ba+0xbd58")
+	  (INP_CNAME_euc	"0xc4da+0xc2eb")
+	  (INP_CNAME_utf-8	"0xe585a7+0xe7a2bc")
+	  (BEEP_WRONG		YES)))
+
