@@ -74,6 +74,8 @@ xcin-2.5.3-pre3:  2001/12
       (when libtabe/libbims/BerkeleyDB not available)
     b. Add Berkeley DB4 auto-detecting.
 
+25. Partial Darwin support.
+    Thanks to <glee@gnupilgrims.org>.
 
 xcin-2.5.3-pre2:  2001/12/02
 ------------------------------
